[package]
name = "carboxyl-mobx"
version = "0.1.0"
authors = ["Stephen Davies <steve9164@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
carboxyl = "0.2.1"
wasm-bindgen = "0.2.63"
serde_json = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
